argocd-k3s/resources/kyverno/policies/require-container-securitycontext-demo-app.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-container-securitycontext-demo-app
spec:
  background: true
  rules:
    - name: require-container-securitycontext
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaces:
                - demo-app-dev
      validate:
        failureAction: Enforce
        message: "Containers must run as non-root and disallow privilege escalation."
        pattern:
          spec:
            template:
              spec:
                containers:
                  - securityContext:
                      runAsNonRoot: true
                      allowPrivilegeEscalation: false
